--- a/src/sass/abstracts/_variables.scss
+++ b/src/sass/abstracts/_variables.scss
@@ -32,7 +32,7 @@ $color-nav-link-active: #32628c !default;
 // Inverse (light text on dark background)
 $color-inverse-text: #f5f6f7 !default;
 $color-inverse-heading: #fff !default;
-$color-inverse-bg: #005bc4 !default;
+$color-inverse-bg: #102540 !default;
 $color-inverse-link: #f5f6f7 !default;
 $color-inverse-btn: #fff !default;
 $color-inverse-btn-bg: #32628c !default;
