Styling for blog gallery

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -17,6 +17,7 @@
 @import "components/cards";
 @import "components/inverse";
 @import "components/banner";
+@import "components/gallery";
 
 // Layouts
 @import "layouts/site";
